@@ -1,5 +1,5 @@
 /*
- * Copyright  2000-2004 The Apache Software Foundation
+ * Copyright  2000-2006 The Apache Software Foundation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -38,13 +38,15 @@ public class ScriptDefBase extends Task implements DynamicConfigurator {
 
     /** Attributes */
     private Map attributes = new HashMap();
+    
+    private String text;
 
     /**
      * Locate the script defining task and execute the script by passing
      * control to it
      */
     public void execute() {
-        getScript().executeScript(attributes, nestedElementMap, this);
+        getScript().executeScript(attributes, nestedElementMap,this);
     }
 
     private ScriptDef getScript() {
@@ -93,6 +95,36 @@ public class ScriptDefBase extends Task implements DynamicConfigurator {
         }
 
         attributes.put(name, value);
+    }
+
+    /**
+     * Set the script text.
+     *
+     * @param text a component of the script text to be added.
+     * @since ant1.7
+     */
+    public void addText(String text) {
+        this.text=text;
+    }
+
+    /**
+     * get the text of this element; may be null
+     * @return text or null for no nested text
+     * @since ant1.7
+     */
+    public String getText() {
+        return text;
+    }
+
+    /**
+     * Utility method for nested scripts; throws a BuildException
+     * with the given message.
+     * @param message text to pass to the BuildException
+     * @throws BuildException always.
+     * @since ant1.7
+     */
+    public void fail(String message) {
+        throw new BuildException(message);
     }
 }
 
